--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,8 @@
 }
 body,
 html {
-    background-color: #f5f5f5;
+    /*background-color: #f5f5f5;*/
+    background-color: #282c34;
 }
 .coin-app {
 }
@@ -22,6 +23,9 @@ html {
 table {
     width: 100%;
     padding: 40px 10%;
+}
+thead{
+    color: #f1f1f1;
 }
 
 td,
@@ -74,6 +78,8 @@ th {
 }
 .coin-search h1 {
     padding-bottom: 10px;
+    color: #0070f3;
+    /*color: #f1f1f1;*/
 }
 .green {
     color: green;
