--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,19 @@ html {
     /*background-color: #f5f5f5;*/
     background-color: #282c34;
 }
+
 .coin-app {
+    max-width: 1200px;
+    margin: 0 auto;
+    height: 100vh;
+    max-height: 1000px;
+    padding: 30px;
+    padding-bottom: 0;
+}
+header{
+display: flex;
+justify-content: space-around;
+align-items: center;
 }
 .coin {
     display: flex;
@@ -23,6 +35,8 @@ html {
 table {
     width: 100%;
     padding: 40px 10%;
+/*    background-color: red;*/
+    min-height: 632px;
 }
 thead{
     color: #f1f1f1;
@@ -75,13 +89,13 @@ th {
     }
 }
 .coin-search {
-    padding: 40px;
     text-align: center;
+/*    background-color: red;*/
 }
-.coin-search h1 {
-    padding-bottom: 10px;
-    color: #0070f3;
-    /*color: #f1f1f1;*/
+.coin-search form input{
+    padding: 10px;
+    border-radius: 28px;
+
 }
 .green {
     color: green;
@@ -99,4 +113,22 @@ input {
 }
 h1 {
     font-size: 20px;
+}
+.coin-buttons{
+/*    background-color: green;*/
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+
+}
+.coin-buttons button{
+    width: 40px;
+    height: 30px;
+    font-weight: bold;
+    font-size: 25px;
+/*    color: #282c34;*/
+color: white;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
 }
